--- a/css/game.css
+++ b/css/game.css
@@ -1,6 +1,17 @@
 
+.hud{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 
 .hud-prefix{
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.hud-main-text{
     text-align: center;
 }
 
