--- a/css/style.css
+++ b/css/style.css
@@ -221,32 +221,32 @@ body {
   /* Slider Functionality */
   
   /* Active Slide */
-  #s1:checked ~ #slide1, #s2:checked ~ #slide2, #s3:checked ~ #slide3, #s4:checked ~ #slide4, #s5:checked ~ #slide5 {
+  #s1:checked ~ #slide1, #s2:checked ~ #slide2, #s3:checked ~ #slide3, #s4:checked ~ #slide4, #s5:checked ~ #slide5, #s6:checked ~ #slide6, #s7:checked ~ #slide7, #s8:checked ~ #slide8, #s9:checked ~ #slide9, #s10:checked ~ #slide10 {
     box-shadow: 0 13px 26px rgba(0,0,0, 0.3), 0 12px 6px rgba(0,0,0, 0.2);
     transform: translate3d(0%, 0, 0px);
   }
 
   
   /* Next Slide */
-  #s1:checked ~ #slide2, #s2:checked ~ #slide3, #s3:checked ~ #slide4, #s4:checked ~ #slide5, #s5:checked ~ #slide1 {
+  #s1:checked ~ #slide2, #s2:checked ~ #slide3, #s3:checked ~ #slide4, #s4:checked ~ #slide5, #s5:checked ~ #slide6, #s6:checked ~ #slide7, #s7:checked ~ #slide8, #s8:checked ~ #slide9, #s9:checked ~ #slide10, #s10:checked ~ #slide1 {
     box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2);
     transform: translate3d(15%, 0, -100px);
   }
   
   /* Next to Next Slide */
-  #s1:checked ~ #slide3, #s2:checked ~ #slide4, #s3:checked ~ #slide5, #s4:checked ~ #slide1, #s5:checked ~ #slide2 {
+  #s1:checked ~ #slide3, #s2:checked ~ #slide4, #s3:checked ~ #slide5, #s4:checked ~ #slide1, #s5:checked ~ #slide2, #s6:checked ~ #slide8, #s7:checked ~ #slide9, #s8:checked ~ #slide10, #s9:checked ~ #slide1, #s10:checked ~ #slide2 {
     box-shadow: 0 1px 4px rgba(0,0,0, 0.4);
     transform: translate3d(30%, 0, -250px);
   }
   
   /* Previous to Previous Slide */
-  #s1:checked ~ #slide4, #s2:checked ~ #slide5, #s3:checked ~ #slide1, #s4:checked ~ #slide2, #s5:checked ~ #slide3 {
+  #s1:checked ~ #slide4, #s2:checked ~ #slide5, #s3:checked ~ #slide1, #s4:checked ~ #slide2, #s5:checked ~ #slide3, #s6:checked ~ #slide4, #s7:checked ~ #slide5, #s8:checked ~ #slide6, #s9:checked ~ #slide, #s10:checked ~ #slide8 {
     box-shadow: 0 1px 4px rgba(0,0,0, 0.4);
     transform: translate3d(-30%, 0, -250px);
   }
   
   /* Previous Slide */
-  #s1:checked ~ #slide5, #s2:checked ~ #slide1, #s3:checked ~ #slide2, #s4:checked ~ #slide3, #s5:checked ~ #slide4 {
+  #s1:checked ~ #slide10, #s2:checked ~ #slide1, #s3:checked ~ #slide2, #s4:checked ~ #slide3, #s5:checked ~ #slide4, #s6:checked ~ #slide5, #s7:checked ~ #slide6, #s8:checked ~ #slide7, #s9:checked ~ #slide8, #s10:checked ~ #slide9 {
     box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2);
     transform: translate3d(-15%, 0, -100px);
   }
@@ -304,6 +304,7 @@ body {
   .results{
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-evenly;
     padding: .8rem;
   }  
 
